--- a/src/components/menu/menu.styles.scss
+++ b/src/components/menu/menu.styles.scss
@@ -1,53 +1,54 @@
 @import '../../_variables';
 
-.select__container {
+.menu__container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    gap: 8px;
-    width: 100px;
 
     position: relative;
 }
 
-.select__selected-input {
+.menu__button {
     background-color: $white;
-    border-radius: $small-rounded;
+    border-radius: $full-rounded;
     padding: 8px;
 
-    align-self: stretch;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-
-    .chevron-icon {
-        width: 14px;
-        height: 14px;
+    
+    &:hover {
+        cursor: pointer;
+        background-color: $secondary-variant;
+        color: $white;
     }
+    
+    transition: background-color 240ms cubic-bezier(0.075, 0.82, 0.165, 1);
 }
 
-.select__option-container {
+.menu__option-container {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    align-items: center;
+    align-items: flex-start;
     gap: 8px;
 
     padding: 8px;
-    width: calc(100% - 16px);
+    width: 100px;
 
     background-color: $white;
     border-radius: $small-rounded;
 
     position: absolute;
     top: 44px;
+    right: 0;
     box-shadow: $default-shadow;
     z-index: $menu-option-index;
 }
 
-.select__option-item {
+.menu__option-item {
     align-self: stretch;
 
     display: flex;
@@ -66,5 +67,6 @@
     &.selected, &:hover {
         background-color: $primary;
         color: $white;
+         
     }
 }
