--- a/src/components/task-list/taskList.styles.scss
+++ b/src/components/task-list/taskList.styles.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
-    gap: 8px;
+    gap: 16px;
 }
 
 .task-list__header {
@@ -17,14 +17,19 @@
     align-items: center;
     flex-wrap: wrap;
 
-    h3 {
-        font-size: 24px;
-        font-weight: 500;
-    }
-
     @media screen and (max-width: 425px) {
         flex-direction: column;
         justify-content: flex-start;
         gap: 8px;
     }
+}
+
+.task-list__body {
+    align-self: stretch;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 16px;
 }
