--- a/src/index.scss
+++ b/src/index.scss
@@ -27,3 +27,17 @@ h3 {
 .error-text {
   color: $error;
 }
+
+// Animation
+
+@keyframes blink {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.3;
+  }
+  100% {
+    opacity: 1;
+  }
+}
