--- a/src/components/menu/menu.styles.scss
+++ b/src/components/menu/menu.styles.scss
@@ -12,7 +12,7 @@
 .menu__button {
     background-color: $white;
     border-radius: $full-rounded;
-    padding: 8px;
+    padding: 4px 8px;
 
     display: flex;
     flex-direction: row;
