--- a/src/containers/todos-app/todoAppContainer.styles.scss
+++ b/src/containers/todos-app/todoAppContainer.styles.scss
@@ -1,3 +1,5 @@
+@import '../../variables';
+
 .todo-app__container {
     max-width: 1000px;
     width: 100%;
@@ -16,5 +18,18 @@
     // Mobile
     @media screen and (max-width: 425px) {
         padding: 16px;
+    }
+}
+
+.todo-app__loading-box {
+    align-self: stretch;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    h3 {
+        color: $secondary-variant;
     }
 }
